lombok refactoring